--- a/src/view/index/inicio.sass
+++ b/src/view/index/inicio.sass
@@ -9,7 +9,7 @@
 .login-general
     position: absolute
     width: 80%
-    height: 83%
+    height: 80%
     top: 30px
     left: 0
     right: 0
@@ -132,7 +132,7 @@
     color: #FFFFFF
 
 .login-parents
-    margin-block-start: 0.67em
+    margin-block-start: 0.77em
     font-family: Rounded Mplus 1c Bold
     font-weight: bold
     font-size: 30px
@@ -181,6 +181,8 @@
         margin-block-start: 0
     .login-profesora
         margin-block-start: 0
+    login-parents
+        margin-block-start: 0
 
 
 @media (max-width: 600px)
@@ -199,4 +201,6 @@
     .login-students
         margin-block-end: 0.4em
     .login-profesora
+        margin-block-end: 0.4em
+    login-parents
         margin-block-end: 0.4em
