--- a/src/components/teacher/header/HeaderCode.sass
+++ b/src/components/teacher/header/HeaderCode.sass
@@ -5,7 +5,7 @@
         text-decoration: none
         color: #D4D7D9
 
-.code-header
+.Header-code__header
     height: 60px
     position: relative
     background: #00aae3
