--- a/src/components/teacher/header/Empatia.sass
+++ b/src/components/teacher/header/Empatia.sass
@@ -158,12 +158,13 @@ header nav ul li .caret
     #menuToggle input:checked ~ span:nth-last-child(2)
         transform: rotate(-45deg) translate(0, -1px)
 
+
     #menu-header
         position: absolute
-        width: 300px
+        width: 390px
         margin: -100px 0 0 -50px
-        padding: 50px
-        padding-top: 125px
+        padding: 65px
+        padding-top: 165px
         background: #014e4e5b
         transform-origin: 0% 0%
         list-style-type: none
@@ -173,10 +174,16 @@ header nav ul li .caret
         transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0)
         li
             padding: 10px 0
-            font-size: 22px
+            font-size: 25px
+        .no-touch 
+            .Header-code__header
+                &:hover + .menu-header
+                    height: 120px
   
     #menuToggle input:checked ~ ul
         transform: none
+        -webkit-transition-delay: .3s
+        transition-delay: .3s
     
     .code-clase-detail
         height: 100%
@@ -311,10 +318,10 @@ header nav ul li .caret
 
     #menu-header
         position: absolute
-        width: 300px
+        width: 415px
         margin: -100px 0 0 -50px
-        padding: 50px
-        padding-top: 125px
+        padding: 73px
+        padding-top: 180px
         background: #014e4e5b
         transform-origin: 0% 0%
         list-style-type: none
@@ -324,7 +331,7 @@ header nav ul li .caret
         transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0)
         li
             padding: 10px 0
-            font-size: 22px
+            font-size: 28px
   
     #menuToggle input:checked ~ ul
         transform: none
