--- a/src/view/login.Stud/loginStu.sass
+++ b/src/view/login.Stud/loginStu.sass
@@ -108,10 +108,10 @@ input[type=text]
         transition: all 0.4s
 
         background: #6a7dfe
-        background: -webkit-linear-gradient(top, #21d4fd, #b721ff)
-        background: -o-linear-gradient(bottom, #21d4fd, #b721ff)
-        background: -moz-linear-gradient(top, #21d4fd, #b721ff)
-        background: linear-gradient(top, #21d4fd, #b721ff)
+        background: -webkit-linear-gradient(to left, #21d4fd, #b721ff)
+        background: -o-linear-gradient(to left, #21d4fd, #b721ff)
+        background: -moz-linear-gradient(to left, #21d4fd, #b721ff)
+        background: linear-gradient(to left, #21d4fd, #b721ff)
 
     &::after
         font-family: Opal
