--- a/src/components/teacher/header/Empatia.sass
+++ b/src/components/teacher/header/Empatia.sass
@@ -158,6 +158,30 @@ header nav ul li .caret
     #menuToggle input:checked ~ span:nth-last-child(2)
         transform: rotate(-45deg) translate(0, -1px)
 
+    #menuToggle .close-menu
+        position: fixed
+        top: 0
+        left: 0
+        width: 100%
+        height: 100vh
+        background: rgba(0,0,0,0)
+        cursor: pointer
+        -webkit-transition-property: all
+        transition-property: all
+        -webkit-transition-duration: .3s
+        transition-duration: .3s
+        -webkit-transition-delay: 0s
+        transition-delay: 0s
+        visibility: hidden
+        opacity: 0
+
+    #menuToggle input:checked ~ .close-menu
+        -webkit-transition-duration: 1s
+        transition-duration: 1s
+        -webkit-transition-delay: .3s
+        transition-delay: .3s
+        background: rgba(0,0,0,.5)
+        visibility: visible
 
     #menu-header
         position: absolute
@@ -172,6 +196,7 @@ header nav ul li .caret
         transform-origin: 0% 0%
         transform: translate(-100%, 0)
         transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0)
+        z-index: 2
         li
             padding: 10px 0
             font-size: 25px
@@ -184,6 +209,7 @@ header nav ul li .caret
         transform: none
         -webkit-transition-delay: .3s
         transition-delay: .3s
+        z-index: 2
     
     .code-clase-detail
         height: 100%
@@ -194,16 +220,25 @@ header nav ul li .caret
             font-size: 25px
             color: #3087a4
             text-align: start
-    body
+    .content
         padding-top: 80px
-
         &
+            width: 100%
+            height: 100vh
+            padding: 0
+            margin: 0
+            box-shadow: 0 0 50px 0 rgba(0,0,0,.8)
+            -webkit-transition-property: all
+            transition-property: all
+            -webkit-transition-delay: .3s
+            transition-delay: .3s
+            -webkit-transition-duration: .5s
+            transition-duration: .5s
             display: block
             width: 100%
             position: fixed
             top: 0
-            background: #3087a4
-
+            z-index: 0
         & .bt-menu
             display: block
             padding: 20px
