--- a/src/components/teacher/footer/FooterContainer.sass
+++ b/src/components/teacher/footer/FooterContainer.sass
@@ -105,7 +105,8 @@ iframe
 /* Footer Right */
 
 .footer-distributed .footer-right 
-    width: 30%
+    width: 45%
+    
 
 
 .footer-distributed .footer-company-about 
@@ -337,6 +338,26 @@ iframe
    /* animation: ripple 1000ms infinite;
     animation-play-state: paused;*/  
 
+/*envoltura*/
+.envoltura
+    width: 100%
+    height: 100%
+    position: absolute
+    background:red
+   
+.footer-left
+    position: fixed
+    width: 20%
+    height: 17%
+    border: solid 5px white 
+    zIndex: 0.1
+
+
+
+
+
+
+
 
 
 @media (min-width: 320px) and (max-width: 480px) 
@@ -349,27 +370,41 @@ iframe
         position: fixed
         bottom: 0
         left: 0 
+
+    .envoltura
+        width: 100%
+        height: 100%
+        position: absolute
+   
     .footer-left
-        position: relative
-        width: 50%
-        height: 180%
-        border: solid 5px white
-
-    .footer-distributed .footer-left,
-    .footer-distributed .footer-center,
-    .footer-distributed .footer-right 
-        display: inline-block
-        vertical-align: top
-            
-    .pres 
-        width: 500%
-        height: 50%
-        background-color: rgb(48, 135, 164)
-        border-left-width: 10px
-        border-right-width: 10px
+        position: flex
+        width: 35%
+        height: 17%
+        border: solid 5px white 
+        zIndex: 0.1
     
-    .formulario
-        width: 200%
-        height: 50%
+        
+    .footer-distributed .footer-right .div_audio .div_btn 
+        border-radius: 50%
+        width: 100px
+        border: solid 3px
+        height: 100px
+        background: #ffffff
+        /* margin: 100px; */
+        position: relative
+        left: 70%
+        bottom: 50%
+        cursor: pointer
+        /* top: 0;*/
 
-  
+    .footer-distributed .footer-right .div_audio 
+        position: relative
+        left: -15%
+        width: auto
+        max-width: 300px
+    
+
+
+
+        
+   
