--- a/src/components/student/footer/footerStyles.sass
+++ b/src/components/student/footer/footerStyles.sass
@@ -25,8 +25,8 @@ footer.page-footer
 .pt-3, .py-3
     padding-top: 1rem!important
 
-article, aside, figcaption, figure, footer, header, hgroup, main, nav, section
-    display: block
+// article, aside, figcaption, figure, footer, header, hgroup, main, nav, section
+//     display: block
 
 footer.page-footer .container-fluid
     width: auto
@@ -55,14 +55,14 @@ footer.page-footer a
 .btn-abrir-popup
     cursor: pointer
 
-a
-    cursor: pointer
-    text-decoration: none
-    color: #007bff
-    -webkit-transition: all .2s ease-in-out
-    -o-transition: all .2s ease-in-out
-    transition: all .2s ease-in-out
-    background-color: transparent
+// a
+//     cursor: pointer
+//     text-decoration: none
+//     color: #007bff
+//     -webkit-transition: all .2s ease-in-out
+//     -o-transition: all .2s ease-in-out
+//     transition: all .2s ease-in-out
+//     background-color: transparent
 
 .miniatura
     width: 368px
