--- a/src/components/student/trivia/Trivia.sass
+++ b/src/components/student/trivia/Trivia.sass
@@ -1,7 +1,7 @@
 
-body
-    background: #E5E8E8
-    font-family: Opal
+// body
+//     background: #E5E8E8
+//     font-family: Opal
 
 .codigo
     border-top: 1px solid white
