--- a/src/components/student/Header/headerStyles.sass
+++ b/src/components/student/Header/headerStyles.sass
@@ -53,25 +53,25 @@
         &-expand-lg .navbar-toggler
             display: none
 
-[type=button]:not(:disabled), [type=reset]:not(:disabled), [type=submit]:not(:disabled), button:not(:disabled)
-    cursor: pointer
+// [type=button]:not(:disabled), [type=reset]:not(:disabled), [type=submit]:not(:disabled), button:not(:disabled)
+//     cursor: pointer
 
-    &-toggler
-        padding: .25rem .75rem
-        font-size: 1.25rem
-        line-height: 1
-        background-color: transparent
-        border: 1px solid transparent
-        border-radius: .25rem
+//     &-toggler
+//         padding: .25rem .75rem
+//         font-size: 1.25rem
+//         line-height: 1
+//         background-color: transparent
+//         border: 1px solid transparent
+//         border-radius: .25rem
 
-    &-toggler-icon
-        display: inline-block
-        width: 1.5em
-        height: 1.5em
-        vertical-align: middle
-        content: ""
-        background: no-repeat center center
-        background-size: 100% 100%
+//     &-toggler-icon
+//         display: inline-block
+//         width: 1.5em
+//         height: 1.5em
+//         vertical-align: middle
+//         content: ""
+//         background: no-repeat center center
+//         background-size: 100% 100%
 
-    &-dark .navbar-nav.nav-link:hover
-        color: #fff
+//     &-dark .navbar-nav.nav-link:hover
+//         color: #fff
