--- a/src/components/teacher/chat/test.scss
+++ b/src/components/teacher/chat/test.scss
@@ -22,28 +22,28 @@ Mixins
   }
   
   
-  /*--------------------
-  Body
-  --------------------*/
-  *,
-  *::before,
-  *::after {
-    box-sizing: border-box;
-  }
+  // /*--------------------
+  // Body
+  // --------------------*/
+  // *,
+  // *::before,
+  // *::after {
+  //   box-sizing: border-box;
+  // }
   
-  html,
-  body {
-    height: 100%;
-  }
+  // html,
+  // body {
+  //   height: 100%;
+  // }
   
-  body {
-    background: linear-gradient(135deg, #044f48, #2a7561);
-    background-size: cover;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 12px;
-    line-height: 1.3;
-    overflow: hidden;
-  }
+  // body {
+  //   background: linear-gradient(135deg, #044f48, #2a7561);
+  //   background-size: cover;
+  //   font-family: 'Open Sans', sans-serif;
+  //   font-size: 12px;
+  //   line-height: 1.3;
+  //   overflow: hidden;
+  // }
   
   .bg {
     width: 100%;
