--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -1,194 +1,128 @@
-.navegador
-    height: 50px
-    width: 100%
-    background-color: #4d4d4d
-    position: relative
-    > .navegador-header
-        display: inline
-        > .navegador-title
-            display: inline-block
-            font-size: 22px
-            color: #fff
-            padding: 10px 10px 10px 10px
-    > .navegador-btn 
-        display: none
-    > .navegador-links 
-        display: inline
-        float: right
-        font-size: 18px
-        > a 
-            display: inline-block
-            padding: 13px 10px 13px 10px
-            text-decoration: none
-            color: #efefef
-        > a:hover 
-            background-color: rgba(0, 0, 0, 0.3)
-    > #navegador-check 
-        display: none
 
-@media (max-width:600px) 
-  .navegador 
-    > .navegador-btn 
-        display: inline-block
-        position: absolute
-        right: 0px
-        top: 0px
-        label 
-            display: inline-block
-            width: 50px
-            height: 50px
-            padding: 13px
-            &:hover,.navegador  #navegador-check:checked ~ .navegador-btn > label 
-                background-color: rgba(0, 0, 0, 0.3)
-        > span 
-            display: block
-            width: 25px
-            height: 10px
-            border-top: 2px solid #eee
-    .navegador-links 
-        display: block
-        width: 100%
-        background-color: #333
-        height: 0px
-        transition: all 0.3s ease-in
-        overflow-y: hidden
-        top: 50px
-        left: 0px
-        > a 
-            display: block
-            width: 100%
-    > #navegador-check:not(:checked) ~ .navegador-links 
-        height: 0px
-    > #navegador-check:checked ~ .navegador-links 
-        height: calc(100vh - 50px)
-        overflow-y: auto
-
-//Espacio para los cards
-.main
-    max-width: 1200px
-    margin: 0 auto
-
-h1 
-    font-size: 24px
-    font-weight: 400
-    text-align: center
-
-img 
-    height: auto
+.teacherCourses__l-container
     max-width: 100%
-    vertical-align: middle
-
-.btn 
-//Botón para ingresar a la clase
-    color: #ffffff
-    padding: 0.8rem
-    font-size: 14px
-    text-transform: uppercase
-    border-radius: 4px
-    font-weight: 400
-    display: block
-    width: 100%
-    cursor: pointer
-    border: 1px solid rgba(255, 255, 255, 0.2)
-    background: transparent
-    &:hover 
-        background-color: rgba(255, 255, 255, 0.12)
-
-.cards 
+    padding-left: 1rem
+    padding-right: 1rem
     display: flex
-    flex-wrap: wrap
-    list-style: none
-    margin: 0
-    padding: 0
-
-.cards_item 
-    display: flex
-    padding: 1rem
-
-@media (min-width: 40rem) 
-    .cards_item 
-        width: 50%
-
-@media (min-width: 56rem) 
-    .cards_item 
-        width: 33.3333%
-
-.card_playtec 
-//Card
-    background-color: white
-    border-radius: 0.25rem
-    box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25)
-    display: flex
-    flex-direction: column
-    overflow: hidden
-
-.card_content 
-//Todo el contenido del Curso
-    padding: 1rem
-    background: rgb(44,107,166)
-    background: linear-gradient(90deg, rgba(44,107,166,1) 0%, rgba(44,107,166,1) 22%, rgba(0,212,255,1) 100%)
-
-.card_title 
-//Titulo del Curso
-    color: #ffffff
-    font-size: 1.1rem
-    font-weight: 700
-    letter-spacing: 1px
-    text-transform: capitalize
-    margin: 0px
-
-.card_text 
-//Descripción del Curso
-    color: #ffffff
-    font-size: 0.875rem
-    line-height: 1.5
-    margin-bottom: 1.25rem
-    font-weight: 400
-
-.made_by
-    font-weight: 400
-    font-size: 13px
-    margin-top: 35px
+    margin-right: auto
+    margin-left: auto
+    // flex-wrap: wrap
+  
+.teacherCourses__center-block
+    margin-left: auto
+    margin-right: auto
+  
+.teacherCourses__center-content
     text-align: center
+  
+.teacherCourses__main-header
+    height: 3rem;
+    border-bottom: 1px solid #CCC
+  
+.teacherCourses__main-header__block
+    justify-content: space-between
+    align-items: center
+    height: 100%
+  
+.teacherCourses__main-logo
+    height: 2rem
+  
+.teacherCourses__main-menu
+    margin-top: 0
+    margin-bottom: 0
+    padding-left: 0
+    list-style: none
 
-#target-content 
+.teacherCourses__main-menu__item
+    padding: 1rem
+    &:hover
+        background-color: #52BE7F
+.teacherCourses__main-menu__addCourse,
+.teacherCourses__main-menu__LogOut
+    color: #CCC
+    margin-left: 1rem
+    text-decoration: none
+    
+.teacherCourses__main-nav
     position: fixed
-    top: 0
+    height: calc(100vh - 3rem)
+    width: 80vw
+    background: #141618
+    top: 3rem
+    right: -80vw
+    transition: right .3s
+    padding-top: 1rem
+    z-index: 100
+    
+.teacherCourses__main-nav.show
     right: 0
-    bottom: 0
+  
+.teacherCourses__main-menu-toggle
+    width: 2.2rem
+    height: 1.6rem
+    background: linear-gradient(#141618 20%, transparent 20%, transparent 40%, #141618 40%, #141618 60%, transparent 60%, transparent 80%, #141618 80%)
+    cursor: pointer
+  
+.teacherCourses__main-banner
+    --padding: 2rem 1rem 3rem
+    --logo-height: 3rem
+    padding: 2rem 1rem 3rem
+    background: #007BDF
+    color: #FFF
+    text-align: center
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 94%)
+    position: relative
+
+.teacherCourses__main-banner__content
+    position: relative
+.teacherCourses__main-banner__logo
+    height: 3rem
+    display: block
+    margin: 0 auto .5rem
+.teacherCourses__main-banner__hero-image
+    position: absolute
+    top: 0
     left: 0
-    pointer-events: none
-    opacity: 0
-    transition: opacity 200ms
-    &:target 
-        pointer-events: all
-        opacity: 1
-    #target-inner 
-        position: absolute
-        display: block
-        padding: 48px
-        line-height: 1.8
-        width: 70%
-        top: 50%
-        left: 50%
-        -webkit-transform: translateX(-50%) translateY(-50%)
-        transform: translateX(-50%) translateY(-50%)
-        box-shadow: 0px 12px 24px rgba(0, 0, 0, 0.2)
-        background: white
-        color: #34495E
-        h2 
-            margin-top: 0
-        code 
-            font-weight: bold
-    a.close 
-        content: ""
-        position: absolute
-        top: 0
-        right: 0
-        bottom: 0
-        left: 0
-        background-color: #34495E
-        opacity: 0.5
-        transition: opacity 200ms
-        &:hover 
-            opacity: 0.4
+    width: 100%
+    height: 100%
+    object-fit: cover
+    object-position: center
+    opacity: .1
+.teacherCourses__small
+    font-size: .75rem
+
+@media screen and (min-width: 960px)
+    .teacherCourses__main-menu
+        display: flex
+    .teacherCourses__main-menu__addCourse
+        color: #53575A
+        text-decoration: none
+        font-size: 1em
+        padding: 0.5rem;
+        border-radius: 39px;
+        &:hover
+            background-color: #FB9600
+            color: white
+
+    .teacherCourses__main-menu__LogOut
+        color: #53575A
+        text-decoration: none
+        font-size: 1em
+        padding: 0.5rem;
+        border-radius: 39px;
+        &:hover
+            color: white
+            background-color: #E91E63
+    .teacherCourses__main-nav
+        position: static
+        background: transparent
+        padding-top: 0
+        height: auto
+        width: auto
+    .teacherCourses__main-menu-toggle
+        display: none
+    .teacherCourses__main-banner
+        --padding: 5rem 1rem 6rem
+        --logo-height: 5rem 
+    .teacherCourses__main-menu__item:hover
+        background: none
