--- a/src/components/teacher/header/Empatia.sass
+++ b/src/components/teacher/header/Empatia.sass
@@ -13,75 +13,69 @@
 #menuToggle
     display: none
 
-header nav
+#Empatia-header
     background: #3087a4
     z-index: 1000
     max-width: 100%
     width: 100%
-    margin: auto
-    ul
-        list-style-type: none
-        text-align: center
-        li
-            display: inline-block
+    margin: auto 
+    #Empatia-header__menu
+        background: #3087a4
+        z-index: 1000
+        max-width: 100%
+        width: 100%
+        margin: auto
+        ul
+            list-style-type: none
+            text-align: center
+            li
+                display: inline-block
+                position: relative
+                width: 15%
+                &:hover
+                    background: #E6344A
+                .a
+                    color: #fff
+                    display: block
+                    text-decoration: none
+                    padding: 13px
+                    & span
+                        margin-right: 10px
+                .nav-lista:focus
+                    background: #6ac3c35b
+                .nav-azar:focus
+                    background: #6ac3c35b
+                .nav-grupos:focus
+                    background: #6ac3c35b
+                .nav-temporizador:focus
+                    background: #6ac3c35b
+                .nav-trivia:focus
+                    background: #6ac3c35b
+        ul li:hover .children
+            display: block
+        ul li .children
+            display: none
+            background: #011826
+            position: absolute
+            width: 150%
+            z-index: 1000
+        ul li .children li
+            display: block
+            overflow: hidden
+            border-bottom: 1px solid rgba(255, 255, 255, .5)
+        ul li .children li .a
+            display: block
+        ul li .children li .a span
+            float: right
             position: relative
-            width: 15%
-            &:hover
-                background: #E6344A
-            .a
-                color: #fff
-                display: block
-                text-decoration: none
-                padding: 13px
-
-.nav-lista:focus
-    background: #6ac3c35b
-
-.nav-azar:focus
-    background: #6ac3c35b
-
-.nav-grupos:focus
-    background: #6ac3c35b
-
-.nav-temporizador:focus
-    background: #6ac3c35b
-
-.nav-trivia:focus
-    background: #6ac3c35b
-
-header nav ul li .a span
-    margin-right: 10px
-
-header nav ul li:hover .children
-    display: block
-
-header nav ul li .children
-    display: none
-    background: #011826
-    position: absolute
-    width: 150%
-    z-index: 1000
-
-header nav ul li .children li
-    display: block
-    overflow: hidden
-    border-bottom: 1px solid rgba(255, 255, 255, .5)
-
-header nav ul li .children li .a
-    display: block
-
-header nav ul li .children li .a span
-    float: right
-    position: relative
-    top: 3px
-    margin-right: 0
-    margin-left: 10px
-
-header nav ul li .caret
-    position: relative
-    top: 3px
-    margin-left: 10px
-    margin-right: 0px
+            top: 3px
+            margin-right: 0
+            margin-left: 10px
+        ul li .caret
+            position: relative
+            top: 3px
+            margin-left: 10px
+            margin-right: 0px
     
 .code
     font-size: 15px
@@ -101,6 +95,8 @@ header nav ul li .caret
     margin-bottom: 200px
     padding: 12px
 
+
+
 @media screen and (max-width: 800px)
     #menuToggle
         display: block
@@ -116,6 +112,7 @@ header nav ul li .caret
             transition: color 0.3s ease
             &:hover
                 color: #E6344A
+            &
         input
             position: absolute
             width: 40px
@@ -124,7 +121,7 @@ header nav ul li .caret
             left: -3px
             cursor: pointer
             opacity: 0
-            z-index: 2
+            z-index: 3
             webkit-touch-callout: none
         .hamburguesa-span  
             float: none
@@ -164,7 +161,20 @@ header nav ul li .caret
         left: 0
         width: 100%
         height: 100vh
-        background: rgba(0,0,0,0)
+        cursor: pointer
+        -webkit-transition-property: all
+        transition-property: all
+        -webkit-transition-duration: .3s
+        transition-duration: .3s
+        -webkit-transition-delay: 0s
+        transition-delay: 0s
+        visibility: hidden
+        opacity: 0
+
+    #menuToggle .close-menu-menu
+        position: fixed
+        width: 100%
+        height: 100vh
         cursor: pointer
         -webkit-transition-property: all
         transition-property: all
@@ -176,16 +186,22 @@ header nav ul li .caret
         opacity: 0
 
     #menuToggle input:checked ~ .close-menu
+        visibility: visible
         -webkit-transition-duration: 1s
         transition-duration: 1s
         -webkit-transition-delay: .3s
         transition-delay: .3s
-        background: rgba(0,0,0,.5)
+
+    #menuToggle input:checked ~ .close-menu .menu-header 
         visibility: visible
+        -webkit-transition-duration: 1s
+        transition-duration: 1s
+        -webkit-transition-delay: .3s
+        transition-delay: .3s
 
     #menu-header
         position: absolute
-        width: 390px
+        width: 336px
         margin: -100px 0 0 -50px
         padding: 65px
         padding-top: 165px
@@ -198,8 +214,8 @@ header nav ul li .caret
         transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0)
         z-index: 2
         li
-            padding: 10px 0
-            font-size: 25px
+            padding: 13px 0
+            font-size: 33px
         .no-touch 
             .Header-code__header
                 &:hover + .menu-header
@@ -221,24 +237,17 @@ header nav ul li .caret
             color: #3087a4
             text-align: start
     .content
-        padding-top: 80px
-        &
-            width: 100%
-            height: 100vh
-            padding: 0
-            margin: 0
-            box-shadow: 0 0 50px 0 rgba(0,0,0,.8)
-            -webkit-transition-property: all
-            transition-property: all
-            -webkit-transition-delay: .3s
-            transition-delay: .3s
-            -webkit-transition-duration: .5s
-            transition-duration: .5s
-            display: block
-            width: 100%
-            position: fixed
-            top: 0
-            z-index: 0
+        width: 100%
+        height: 100vh
+        padding: 0
+        margin: 0
+        webkit-transition-property: all
+        transition-property: all
+        webkit-transition-delay: .3s
+        transition-delay: .3s
+        webkit-transition-duration: .5s
+        transition-duration: .5s
+            
         & .bt-menu
             display: block
             padding: 20px
@@ -260,6 +269,11 @@ header nav ul li .caret
             text-align: center
             margin: 0px 0px 8px
             line-height: 1.2
+    
+        &:checked ~ .content
+            -webkit-transition-delay: 0s
+            transition-delay: 0s
+            -ms-transform: translateX(-300px)
 
     header nav
         width: 80%
