Commit super estable

--- a/src/components/teacher/temporizador/temporizador.css
+++ b/src/components/teacher/temporizador/temporizador.css
@@ -1,26 +1,43 @@
-.modal-backdrop.show {
-    display:none !important;
-}
 @font-face{
     font-family:clockicons;
     src:url(../../../plugins/clockicons.ttf) format('truetype');
     font-weight:400;
     font-style:normal
 }
-.pure-button {
+.temporizador{
+    text-align: center
+}
+.temporizador .counter_part {
+    display: inline-block;
+    line-height: initial;
+}
+.temporizador .unit_name {
+    font-size: 2rem
+}
+.temporizador .unit_value{
+    font-size: 200px
+}
+.temporizador #alarm {
+    display: none
+}
+.temporizador .counter-tools {
+    text-align: center
+}
+.temporizador .pure-button {
     border: transparent;
     margin-top: 1em!important;
     margin: 0 5px;
     font-size: 20px;
     padding: 0.5em 1em;
+    color: #fff;
 }
-.pure-button:focus,
-.pure-button:hover {
+.temporizador .pure-button:focus,
+.temporizador .pure-button:hover {
     filter: alpha(opacity=90);
     background-image: -webkit-linear-gradient(transparent, rgba(0, 0, 0, .05) 40%, rgba(0, 0, 0, .1));
     background-image: linear-gradient(transparent, rgba(0, 0, 0, .05) 40%, rgba(0, 0, 0, .1))
 }
-.pure-button[disabled] {
+.temporizador .pure-button[disabled] {
     border: none;
     background-image: none;
     filter: alpha(opacity=40);
@@ -28,896 +45,50 @@
     box-shadow: none;
     pointer-events: none
 }
-.counter-tools {
-    cursor: not-allowed !important;
-}
-.pure-button-primary {
+.temporizador .pure-button-primary {
     background-color: #0078e7;
-    color: #fff
 }
-.pure-form input[type=number] {
+.temporizador .pure-button-success{
+    background-color: #00c851;
+}
+.temporizador_form{
+    font-size: 20px;
+    display: flex;
+}
+.temporizador_form input[type=number] {
     padding: .5em .6em;
-    display: inline-block;
     border: 1px solid #ccc;
-    box-shadow: inset 0 1px 3px #ddd;
-    border-radius: 4px;
-    vertical-align: middle;
     box-sizing: border-box;
     text-align: center;
+    width: 100%;
 }
-.pure-form input[type=number]:focus {
+.temporizador_form input[type=number]:focus {
     outline: 0;
     border-color: #129FEA
 }
-.pure-form input[type=number][disabled] {
+.temporizador_form input[type=number][disabled] {
     cursor: not-allowed;
     background-color: #eaeded;
     color: #cad2d3
 }
-.pure-form input:focus:invalid {
+.temporizador_form input:focus:invalid {
     color: #e9322d;
     border-color: #e9322d
 }
-.pure-form .pure-input-1 {
-    width: 100%
+.unit_value{
+    font-family: clockicons !important;
+    color: #000;
 }
-
-
-
-@media only screen and (max-width:480px) {
-
-    .unit_value{
+@media only screen and (max-width:469px) {
+    .temporizador .unit_value{
         font-size: 90px !important;
     }
-    #colon_minute{
+    .temporizador #colon_minute{
         display: none !important;
+    }  
+}
+@media screen and (max-width:1050px) {
+    .unit_value{
+        font-size: 100px !important;
     }
-
-
-    /* .pure-form button[type=submit] {
-        margin: .7em 0 0
-    } */
-    .pure-form input:not([type]),
-    .pure-form input[type=password],
-    .pure-form input[type=email],
-    .pure-form input[type=url],
-    .pure-form input[type=date],
-    .pure-form input[type=month],
-    .pure-form input[type=time],
-    .pure-form input[type=datetime],
-    .pure-form input[type=datetime-local],
-    .pure-form input[type=week],
-    .pure-form input[type=tel],
-    .pure-form input[type=color],
-    .pure-form input[type=number],
-    .pure-form input[type=search],
-    .pure-form input[type=text],
-    .pure-form label {
-        margin-bottom: .3em;
-        display: block
-    }
-    .pure-group input:not([type]),
-    .pure-group input[type=password],
-    .pure-group input[type=email],
-    .pure-group input[type=url],
-    .pure-group input[type=date],
-    .pure-group input[type=month],
-    .pure-group input[type=time],
-    .pure-group input[type=datetime],
-    .pure-group input[type=datetime-local],
-    .pure-group input[type=week],
-    .pure-group input[type=tel],
-    .pure-group input[type=color],
-    .pure-group input[type=number],
-    .pure-group input[type=search],
-    .pure-group input[type=text] {
-        margin-bottom: 0
-    }
-    .pure-form-aligned .pure-control-group label {
-        margin-bottom: .3em;
-        text-align: left;
-        display: block;
-        width: 100%
-    }
-    .pure-form-aligned .pure-controls {
-        margin: 1.5em 0 0
-    }
-    .pure-form .pure-help-inline,
-    .pure-form-message,
-    .pure-form-message-inline {
-        display: block;
-        font-size: .75em;
-        padding: .2em 0 .8em
-    }
-}
-
-.pure-menu-fixed {
-    position: fixed;
-    left: 0;
-    top: 0;
-    z-index: 3
-}
-
-.pure-menu-item,
-.pure-menu-list {
-    position: relative
-}
-
-.pure-menu-list {
-    list-style: none;
-    margin: 0;
-    padding: 0
-}
-
-.pure-menu-item {
-    padding: 0;
-    margin: 0;
-    height: 100%
-}
-
-.pure-menu-heading,
-.pure-menu-link {
-    display: block;
-    text-decoration: none;
-    white-space: nowrap
-}
-
-.pure-menu-horizontal {
-    width: 100%;
-    white-space: nowrap
-}
-
-.pure-menu-horizontal .pure-menu-list {
-    display: inline-block
-}
-
-.pure-menu-horizontal .pure-menu-heading,
-.pure-menu-horizontal .pure-menu-item,
-.pure-menu-horizontal .pure-menu-separator {
-    display: inline-block;
-    zoom: 1;
-    vertical-align: middle
-}
-
-.pure-menu-item .pure-menu-item {
-    display: block
-}
-
-.pure-menu-children {
-    display: none;
-    position: absolute;
-    left: 100%;
-    top: 0;
-    margin: 0;
-    padding: 0;
-    z-index: 3
-}
-
-.pure-menu-horizontal .pure-menu-children {
-    left: 0;
-    top: auto;
-    width: inherit
-}
-
-.pure-menu-active>.pure-menu-children,
-.pure-menu-allow-hover:hover>.pure-menu-children {
-    display: block;
-    position: absolute
-}
-
-.pure-menu-has-children>.pure-menu-link:after {
-    padding-left: .5em;
-    content: "\25B8";
-    font-size: small
-}
-
-.pure-menu-horizontal .pure-menu-has-children>.pure-menu-link:after {
-    content: "\25BE"
-}
-
-.pure-menu-scrollable {
-    overflow-y: scroll;
-    overflow-x: hidden
-}
-
-.pure-menu-scrollable .pure-menu-list {
-    display: block
-}
-
-.pure-menu-horizontal.pure-menu-scrollable .pure-menu-list {
-    display: inline-block
-}
-
-.pure-menu-horizontal.pure-menu-scrollable {
-    white-space: nowrap;
-    overflow-y: hidden;
-    overflow-x: auto;
-    -ms-overflow-style: none;
-    -webkit-overflow-scrolling: touch;
-    padding: .5em 0
-}
-
-.pure-menu-horizontal.pure-menu-scrollable::-webkit-scrollbar {
-    display: none
-}
-
-.pure-menu-horizontal .pure-menu-children .pure-menu-separator,
-.pure-menu-separator {
-    background-color: #ccc;
-    height: 1px;
-    margin: .3em 0
-}
-
-.pure-menu-horizontal .pure-menu-separator {
-    width: 1px;
-    height: 1.3em;
-    margin: 0 .3em
-}
-
-.pure-menu-horizontal .pure-menu-children .pure-menu-separator {
-    display: block;
-    width: auto
-}
-
-.pure-menu-heading {
-    text-transform: uppercase;
-    color: #565d64
-}
-
-.pure-menu-link {
-    color: #777
-}
-
-.pure-menu-children {
-    background-color: #fff
-}
-
-.pure-menu-disabled,
-.pure-menu-heading,
-.pure-menu-link {
-    padding: .5em 1em
-}
-
-.pure-menu-disabled {
-    opacity: .5
-}
-
-.pure-menu-disabled .pure-menu-link:hover {
-    background-color: transparent
-}
-
-.pure-menu-active>.pure-menu-link,
-.pure-menu-link:focus,
-.pure-menu-link:hover {
-    background-color: #eee
-}
-
-.pure-menu-selected .pure-menu-link,
-.pure-menu-selected .pure-menu-link:visited {
-    color: #000
-}
-
-.pure-table {
-    empty-cells: show;
-    border: 1px solid #cbcbcb
-}
-
-.pure-table caption {
-    color: #000;
-    font: italic 85%/1 arial, sans-serif;
-    padding: 1em 0;
-    text-align: center
-}
-
-.pure-table td,
-.pure-table th {
-    border-left: 1px solid #cbcbcb;
-    border-width: 0 0 0 1px;
-    font-size: inherit;
-    margin: 0;
-    overflow: visible;
-    padding: .5em 1em
-}
-
-.pure-table td:first-child,
-.pure-table th:first-child {
-    border-left-width: 0
-}
-
-.pure-table thead {
-    background-color: #e0e0e0;
-    color: #000;
-    text-align: left;
-    vertical-align: bottom
-}
-
-.pure-table td {
-    background-color: transparent
-}
-
-.pure-table-odd td,
-.pure-table-striped tr:nth-child(2n-1) td {
-    background-color: #f2f2f2
-}
-
-.pure-table-bordered td {
-    border-bottom: 1px solid #cbcbcb
-}
-
-.pure-table-bordered tbody>tr:last-child>td {
-    border-bottom-width: 0
-}
-
-.pure-table-horizontal td,
-.pure-table-horizontal th {
-    border-width: 0 0 1px;
-    border-bottom: 1px solid #cbcbcb
-}
-
-.pure-table-horizontal tbody>tr:last-child>td {
-    border-bottom-width: 0
-}
-html,
-button,
-input,
-select,
-textarea,
-.pure-g [class *="pure-u"] {
-    font-family: Helvetica, Arial, sans-serif!important
-}
-body {
-    background-color: #f5f6f9
-}
-.content {
-    padding: 0.4em
-}
-.hidden-all {
-    display: none
-}
-.hidden-lg {
-    display: inline-block!important
-}
-.hidden-lgp {
-    display: inline-block!important
-}
-.visible-md,
-.visible-md-block {
-    display: none!important
-}
-
-.visible-lg {
-    display: none!important
-}
-
-.visible-lgp {
-    display: none!important
-}
-
-@media screen and (min-width:48em) {
-    .visible-md {
-        display: inline-block!important
-    }
-    .visible-md-block {
-        display: block!important
-    }
-}
-
-@media screen and (min-width:64em) {
-    .hidden-lg {
-        display: none!important
-    }
-    .visible-lg {
-        display: inline-block!important
-    }
-}
-
-@media screen and (min-width:70em) {
-    .pure-u-lgp-3-5 {
-        width: 60%
-    }
-    .hidden-lgp {
-        display: none!important
-    }
-    .visible-lgp {
-        display: inline-block!important
-    }
-}
-
-.text-left {
-    text-align: left
-}
-
-.text-right {
-    text-align: right
-}
-
-.text-center {
-    text-align: center
-}
-
-@media screen and (min-width:48em) {
-    html,
-    body {
-        height: 100%
-    }
-}
-
-.flat_box {
-    margin: 0 auto;
-    padding: 0.4em;
-    max-width: 48em
-}
-
-.small-box {
-    margin: 0 auto;
-    padding: 0.4em;
-    max-width: 20em
-}
-
-.counter-list li {
-    margin-bottom: 0.75em
-}
-
-.counter-list hr {
-    color: #D3D3D3;
-    border-color: #D3D3D3;
-    background-color: #D3D3D3
-}
-
-.pure-menu .pure-menu-heading {
-    padding: 0.375em 1em
-}
-
-.pure-menu-heading img {
-    height: 2.25em
-}
-
-.menu {
-    background-color: #3d3f41;
-    overflow: hidden;
-    white-space: nowrap
-}
-
-.menu .pure-menu-link {
-    color: silver;
-    padding: 1em
-}
-
-.menu .pure-menu-selected .pure-menu-link {
-    color: white
-}
-
-.menu .pure-menu-link:hover {
-    color: black
-}
-
-#mobile-menu {
-    display: none
-}
-
-#menu-toggle {
-    display: block;
-    width: 2em;
-    height: 2em;
-    padding: 0.5em;
-    margin-left: auto;
-    margin-right: 0
-}
-
-.pure-menu-horizontal .pure-menu-children {
-    right: 0;
-    left: auto;
-    top: auto;
-    width: inherit;
-    background-color: #3d3f41;
-    text-align: left
-}
-
-.pure-g {
-    overflow: visible
-}
-
-.dropdown-icon {
-    display: block;
-    width: 2em;
-    height: 2em;
-    padding: 0.5em;
-    margin-left: auto;
-    margin-right: 0
-}
-
-.upgrade-link {
-    color: #C36900!important;
-    font-weight: bold
-}
-
-.link,
-.link:hover,
-.link:active,
-.link:visited {
-    color: #0078e7
-}
-
-.link:hover {
-    text-decoration: none
-}
-
-.counter-header {
-    background-color: #555555;
-    color: white;
-    text-align: center;
-    padding-bottom: 0.5em
-}
-
-.counter-header h1 {
-    margin: 0.25em
-}
-
-iframe.facebook_button_count {
-    border: none;
-    overflow: hidden;
-    width: 90px;
-    height: 21px
-}
-
-#create-form label[for=embed-code] {
-    font-size: 125%
-}
-
-#embed-code[readonly] {
-    background-color: white;
-    color: #585858
-}
-
-.button-secondary {
-    color: white;
-    background-color: #1cb841
-}
-
-.button-large {
-    margin: 0.5em;
-    border-radius: 4px
-}
-
-@media screen and (min-width:48em) {
-    .button-large {
-        font-size: 125%
-    }
-}
-
-@media screen and (min-width:64em) {
-    .button-large {
-        font-size: 150%
-    }
-}
-
-.message {
-    background-color: #fcf8e3;
-    color: #8a6d3b;
-    font-weight: bold;
-    padding: 0.5em;
-    text-align: center
-}
-
-.error-message {
-    background-color: #f2dede;
-    color: #a94442
-}
-
-.form-field {
-    white-space: nowrap
-}
-
-.form-field:first-child ~ .form-field {
-    margin-top: 0.75em
-}
-
-.form-field select {
-    padding: 0.2em
-}
-
-.form-toggle {
-    text-align: center
-}
-
-.form-toggle img {
-    display: inline-block
-}
-
-.label-inline {
-    display: inline-block!important
-}
-
-.help-text {
-    color: grey;
-    padding: 5px
-}
-
-.field-errors {
-    display: none;
-    color: #a94442;
-    font-weight: bold;
-    padding: 0.5em;
-    margin-bottom: 0.5em
-}
-
-.important {
-    color: red;
-    font-weight: bold
-}
-
-.green-note {
-    color: green
-}
-
-.nowrap {
-    white-space: nowrap
-}
-
-.bigger {
-    font-size: 1.2em
-}
-
-
-.tcw:after {
-    content: '';
-    display: block;
-    margin-top: 25%
-}
-
-#name {
-    display: block;
-    margin: 0
-}
-
-.counter_part {
-    display: inline-block;
-    line-height: initial;
-}
-
-.unit_value{
-    font-size: 200px
-}
-.unit_name {
-    font-size: 2rem
-}
-
-.unit_value,
-.unit_name,
-#counter,
-#name {
-    text-align: center
-}
-
-.counter-wrapper:link,
-.counter-wrapper:hover,
-.counter-wrapper:active {
-    text-decoration: none
-}
-
-#value-wrapper {
-    height: 100%
-}
-
-.unit_value {
-    color: black
-}
-
-.unit_name {
-    color: black
-}
-
-#minus_sign {
-    display: none
-}
-
-#alarm {
-    display: none
-}
-
-.tcw:after {
-    content: '';
-    display: block;
-    margin-top: 35%
-}
-
-@media screen and (min-width:48em) {
-    .tcw:after {
-        content: '';
-        display: block;
-        margin-top: 25%
-    }
-}
-
-#name {
-    display: block!important;
-    height: 20%!important
-}
-
-
-
-.counter-tools {
-    text-align: center
-}
-
-.counter-tools div {
-    display: inline-block;
-    vertical-align: top
-}
-
-.counter-tool-2 {
-    width: 300px;
-    vertical-align: top;
-    padding: 0 0.4em
-}
-
-.counter-tool-2 .dt {
-    line-height: 1.75em
-}
-
-.counter-tool-3 {
-    margin-top: 1em
-}
-
-.counter-tool-3,
-.counter-slot-right {
-    width: 320px;
-    height: 100px
-}
-
-.counter-tool-1,
-.counter-slot-left {
-    display: none!important
-}
-
-@media screen and (min-width:520px) {
-    .counter-tool-3 {
-        margin-top: 0
-    }
-    .counter-tool-3,
-    .counter-slot-right {
-        width: 200px;
-        height: 200px
-    }
-}
-
-@media screen and (min-width:570px) {
-    .counter-tool-3,
-    .counter-slot-right {
-        width: 250px;
-        height: 250px
-    }
-}
-
-@media screen and (min-width:600px) {
-    .counter-tool-3,
-    .counter-slot-right {
-        width: 300px;
-        height: 250px
-    }
-}
-
-@media screen and (min-width:636px) {
-    .counter-tool-3,
-    .counter-slot-right {
-        width: 336px;
-        height: 280px
-    }
-}
-
-@media (min-width:717px) {
-    .counter-tool-1 {
-        display: inline-block!important
-    }
-    .counter-slot-left {
-        display: block!important
-    }
-    .counter-tool-1,
-    .counter-slot-left,
-    .counter-tool-3,
-    .counter-slot-right {
-        width: 200px;
-        height: 200px
-    }
-}
-
-@media (min-width:767px) {
-    .counter-tool-1,
-    .counter-slot-left {
-        width: 250px;
-        height: 250px
-    }
-    .counter-tool-3,
-    .counter-slot-right {
-        width: 200px;
-        height: 200px
-    }
-}
-
-@media (min-width:817px) {
-    .counter-tool-1,
-    .counter-slot-left,
-    .counter-tool-3,
-    .counter-slot-right {
-        width: 250px;
-        height: 250px
-    }
-}
-
-@media (min-width:867px) {
-    .counter-tool-1,
-    .counter-slot-left {
-        width: 300px;
-        height: 250px
-    }
-    .counter-tool-3,
-    .counter-slot-right {
-        width: 250px;
-        height: 250px
-    }
-}
-
-@media (min-width:917px) {
-    .counter-tool-1,
-    .counter-slot-left,
-    .counter-tool-3,
-    .counter-slot-right {
-        width: 300px;
-        height: 250px
-    }
-}
-
-@media (min-width:953px) {
-    .counter-tool-1,
-    .counter-slot-left {
-        width: 336px;
-        height: 280px
-    }
-    .counter-tool-3,
-    .counter-slot-right {
-        width: 300px;
-        height: 250px
-    }
-}
-
-@media (min-width:989px) {
-    .counter-tool-1,
-    .counter-slot-left,
-    .counter-tool-3,
-    .counter-slot-right {
-        width: 336px;
-        height: 280px
-    }
-}
-
-.comments {
-    max-width: 60em;
-    margin: 0.5em auto 0;
-    text-align: center
-}
-
-#seconds {
-    color: red
-}
-
-#year_wrapper,
-#month_wrapper,
-#week_wrapper,
-#day_wrapper {
-    display: none
-}
-
-#colon_hour,
-#colon_minute {
-    display: inline-block
-}
-
-.tip {
-    margin-top: 1em;
-    display: none!important
-}
-
-
-#hour,#colon_hour,#minute,.unit_value,#second{
-    font-family: clockicons !important;
 }
