--- a/src/components/teacher/temporizador/temporizador.css
+++ b/src/components/teacher/temporizador/temporizador.css
@@ -48,6 +48,10 @@
 .temporizador .pure-button-primary {
     background-color: #0078e7;
 }
+.temporizador .unit_value{
+    font-family: clockicons !important;
+    color: #000;
+}
 .temporizador .pure-button-success{
     background-color: #00c851;
 }
@@ -74,10 +78,6 @@
 .temporizador_form input:focus:invalid {
     color: #e9322d;
     border-color: #e9322d
-}
-.unit_value{
-    font-family: clockicons !important;
-    color: #000;
 }
 @media only screen and (max-width:469px) {
     .temporizador .unit_value{
