cambios de sasse empatia

--- a/src/view/login.Stud/ingresarCodigo.sass
+++ b/src/view/login.Stud/ingresarCodigo.sass
@@ -1,15 +1,21 @@
 
 @keyframes bgcolor
     0%
-        background-color: #e8d1ff
+        // background-color: #e8d1ff
+        background-color: #45a3e5
+
     30%
-        background-color: #D7E8FF
+        // background-color: #D7E8FF
+        background-color: #66bf39
     60%
-        background-color: #F0FFE2
+        // background-color: #F0FFE2
+        background-color: #b8cf37
     90%
-        background-color: #FFF8D2
+        // background-color: #FFF8D2
+        background-color: #fff133
     100%
-        background-color: #FBECEE
+        // background-color: #FBECEE
+        background-color: #864cbf
     //contenedor principal
 .enter-code__contenedor
     -webkit-animation: bgcolor 20s infinite
@@ -41,7 +47,8 @@
     &:hover
         color: white
     .enter-code__changeStudent &
-        color: #2B4F95
+        // color: #2B4F95
+        color: #ffffff
 
 .enter-code__body
     width: 100%
@@ -75,7 +82,8 @@
     border: none
     border-radius: 0
     background: #f0f0f0
-    color: #aaa
+    // color: #aaa
+    color: black
     font-weight: 400
     font-family: Opal
     -webkit-appearance: none
