--- a/src/components/teacher/footer/FooterContainer.sass
+++ b/src/components/teacher/footer/FooterContainer.sass
@@ -201,8 +201,7 @@ iframe
 /* ------------------------- */
 
 .btn-abrir-popup 
-    cursor: pointer;
-
+    cursor: pointer
 
 .popup.active 
     transform: scale(1)
@@ -272,12 +271,14 @@ iframe
     box-shadow: none
     color: transparent
     cursor: pointer
-    line-height: 80px;
-    margin: 0
+    line-height: 120px
+    margin: 0%
     transform: translateY(-50%)
-    width: 100px
-    height: 100px
-    top: 50%
+    width: 90px
+    height: 90px
+    top: 49%
+
+
 
 
 .diapo-content.active 
@@ -328,7 +329,7 @@ iframe
     width: 100px
     border: solid 3px
     height: 100px
-    background: #020202
+    background: #ffffff
     margin: 0 auto
     cursor: pointer
     /*top : 0;*/
@@ -397,6 +398,35 @@ iframe
     .footer-distributed .footer-left 
         width: 53%
 
+    .btn-back,
+    .btn-next 
+        position: absolute
+        background: #00a8ff no-repeat center left
+        border: 1px solid #fff
+        border-radius: 50%
+        box-shadow: none
+        color: transparent
+        cursor: pointer
+        line-height: 120px
+        margin: 0%
+        transform: translateY(-50%)
+        width: 90px
+        height: 90px
+        top: 49%
+        display: none
 
-        
+    .popup
+        background: #F8F8F8
+        box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3)
+        border-radius: 0px 10px 10px 50px
+        padding: 20px
+        text-align: center
+        width: 70%
+        height: 85%
+        transition: .3s ease all
+        transform: scale(0.7)
+        /* opacity: 0; */
+
+    .modal-content 
+        left: 50px      
        
