--- a/src/components/teacher/header/Empatia.sass
+++ b/src/components/teacher/header/Empatia.sass
@@ -28,6 +28,7 @@
         ul
             list-style-type: none
             text-align: center
+            margin-block-start: 0
             li
                 display: inline-block
                 position: relative
