--- a/src/components/teacher/header/Empatia.sass
+++ b/src/components/teacher/header/Empatia.sass
@@ -96,6 +96,10 @@
     margin-bottom: 200px
     padding: 12px
 
+#div_head 
+    transition: margin-Right .7s
+    margin-block-start: -17px
+
 
 
 @media screen and (max-width: 800px)
@@ -308,6 +312,10 @@
         transition: margin-Right .7s
         margin-bottom: 200px
         padding: 12px
+
+    #div_head 
+        transition: margin-Right .7s
+        margin-block-start: 0
 
 @media screen and (max-width: 600px)
     #menuToggle
