--- a/src/components/teacher/trivia/trivia.sass
+++ b/src/components/teacher/trivia/trivia.sass
@@ -1,7 +1,3 @@
-@media screen and (max-width:767px)
-    .containerRight
-        max-resolution: top 2px
-        
 .cabeza
     margin-top: -16px
     background: #333
@@ -10,39 +6,34 @@
     height: 60px
     box-shadow: rgba(150, 150, 150, 0.5) 0px 2px 2px
     position: static
-    /* Hacemos que la cabecera tenga una posición fija */
-.containerRight
-    margin-top: 5px
-.cuerpo 
+    & .titulo 
+        margin: 10px auto auto auto
+
+.cuerpo
     width: 100%
     height: 65%
 
-.cabeza .titulo 
-    margin: 10px auto auto auto
 
 .cont-btn-resp 
     margin: auto 0 auto 15px
 
-.cont-btn-resp2 
+.cont-btn-resp2
     margin: auto 15px auto 0
 
-/* botones cabecera */
 .enviar,.restaurar,.respuestas 
-    width: 130px
-    background: #26890c
-    color: #fff
-    text-decoration: none
-    font-weight: bold
-    font-size: 16px
-    border: none
-    padding: 10px 27px
-    margin: 7px 10px 10px 10px
-    border-radius: 5px
-    box-shadow: inset 0 -4px rgba(0, 0, 0, .25)
-    outline: none !important
+    width: 130px;
+    background: #26890c;
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 16px;
+    border: none;
+    padding: 10px 27px;
+    margin: 7px 10px 10px 10px;
+    border-radius: 5px;
+    box-shadow: inset 0 -4px rgba(0, 0, 0, .25);
+    outline: none !important;
 
-.h1
-    align-content: center
 
 .respuestas 
     background: #45a3e5
@@ -50,109 +41,172 @@
         background: #3086c4
         box-shadow: inset 0 -1px rgba(0, 0, 0, .25)
         margin: 9px 10px 10px 10px
-        outline:none
+        outline: none
 
 .restaurar 
     background: #F11D0B
+    &:hover
+        background: rgb(197, 20, 4);
+        box-shadow: inset 0 -1px rgba(0, 0, 0, .25);
+        margin: 9px 10px 10px 10px;
 
-.enviar:hover 
-    background: #1e7209
-    box-shadow: inset 0 -1px rgba(0, 0, 0, .25)
-    margin: 9px 10px 10px 10px
 
-.restaurar:hover 
-    background: rgb(197, 20, 4)
-    box-shadow: inset 0 -1px rgba(0, 0, 0, .25)
-    margin: 9px 10px 10px 10px
+.enviar:hover
+    background: #1e7209;
+    box-shadow: inset 0 -1px rgba(0, 0, 0, .25);
+    margin: 9px 10px 10px 10px;
 
-/* Contenido */
+
 .label
-    margin-bottom: 0
+    margin-bottom: 0;
 
-.pregunta:focus 
-    border: 2px solid #000
 
 .pregunta 
-    width: 100%
-    /* Full width */
-    padding: 9px
-    /* Some padding */
-    font-size: 20px
-    border: 2px solid gray
-    /* Gray border */
-    box-sizing: border-box
-    /* Make sure that padding and width stays in place */
-    margin-top: 6px
-    /* Add a top margin */
-    margin-bottom: 5px
-    /* Bottom margin */
-    resize: vertical
-    /* Allow the user to vertically resize the textarea (not horizontally) */
-    outline: none
+    width: 100%;
+    padding: 9px;
+    font-size: 20px;
+    border: 2px solid gray;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 5px;
+    resize: vertical;
+    outline: none;
+    &:focus
+        border: 2px solid #000
+
 
 .resp-grp
-    display: flex
+    display: flex;
+
 
 .input-tiempo
-    margin-bottom: 18px
+    margin-bottom: 18px;
+
 
 .image-container 
-    display: flex
-    height: 132px
-    width: 99%
-    padding: 12px
-    border: 3px dotted #B2BABB
-    background: #F2F4F4
-    /* Add a top margin */
-    margin-bottom: 18px
-    /* Bottom margin */
+    display: flex;
+    height: 142px;
+    width: 99%;
+    padding: 12px;
+    border: 3px dotted #B2BABB;
+    background: #F2F4F4;
+    margin-bottom: 18px;
 
-.imagen 
-    margin: auto
+
+.imagen
+    margin: auto;
+
 
 .input-respuestas 
-    width: 91%
-    padding: 10px
-    /* Some padding */
-    font-size: 20px
-    border: 2px solid gray
-    /* Gray border */
-    box-sizing: border-box
-    /* Make sure that padding and width stays in place */
-    margin-top: 6px
-    /* Add a top margin */
-    margin-bottom: 6px
-    /* Bottom margin */
-    margin-right: 8px
-    resize: vertical
-    /* Allow the user to vertically resize the textarea (not horizontally) */
-    outline: none
+    width: 91%;
+    padding: 10px;
+    font-size: 20px;
+    border: 2px solid gray;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 6px;
+    margin-right: 8px;
+    resize: vertical;
+    outline: none;
 
 .respuesta:focus,
 .respuesta2:focus 
-    border: 2px solid #000
+    border: 2px solid #000;
+
+
 
 .modal-respuestas 
-    display: none
-    position: fixed
-    z-index: 1
-    padding-top: 100px
-    left: 0
-    top: 0
-    width: 100%
-    height: 100%
-    overflow: auto
-    background-color: rgb(0, 0, 0)
-    background-color: rgba(0, 0, 0, 0.4)
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
 
-.modal-content-respuestas 
-    color: #aaaaaa
-    background-color: #1C2833
-    margin: auto
-    padding: 20px
-    border: 1px solid #888
-    width: 50%
-    min-height: 410px
+.modal-content-respuestas
+    color: #aaaaaa;
+    background-color: #1C2833;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+    min-height: 410px;
+
 
 .modal-body-respuestas 
-    margin: 25px
+    margin: 25px;
+
+
+
+
+.close 
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    &:focus,
+    &:hover
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+
+
+.rolldown-list 
+    text-align: left;
+    padding: 0;
+    margin: 0;
+    & li 
+        padding: 12px;
+        margin-bottom: .125em;
+        display: block;
+        list-style: none;
+        font-weight: bold;
+        font-size: 20px;
+        text-transform: uppercase;
+        overflow: hidden;
+        margin-top: 10px;
+        visibility: hidden;
+        animation: rolldown .7s 1;
+        transform-origin: 50% 0;
+        animation-fill-mode: forwards;
+        &:nth-child(2n)
+            background-color: #444;
+        &:nth-child(2n+1)
+            background-color: #333;
+            animation-delay: 0.25s;
+            -webkit-animation-delay: 0.25s !important;
+        &:nth-child(2n+2)
+            animation-delay: 0.50s;
+            -webkit-animation-delay: 0.50s !important;
+        &:nth-child(2n+3) 
+            animation-delay: 4s;
+            -webkit-animation-delay: 0.75s !important;
+        &:nth-child(2n+4)
+            animation-delay: 4s;
+            -webkit-animation-delay: 1s !important;
+        &:nth-child(2n+5)
+            animation-delay: 4s;
+            -webkit-animation-delay: 1.25s !important;
+
+
+#myList
+    position: absolute;
+    width: 50%;
+    left: 50%;
+    margin-left: -25%;
+
+
+@keyframes rolldown 
+    0%
+        visibility: visible;
+        transform: rotateX(180deg) perspective(500px);
+    70%
+        visibility: visible;
+        transform: rotateX(-20deg);
+    100%
+        visibility: visible;
+        transform: rotateX(0deg);
