--- a/src/components/teacher/header/Empatia.sass
+++ b/src/components/teacher/header/Empatia.sass
@@ -204,7 +204,7 @@
         .code-clase-detail__name
             display: none
 
-    .content
+    .content-headercode
         width: 100%
         height: 100vh
         padding: 0
@@ -386,7 +386,7 @@
         max-width: 45%
         .code-clase-detail__name
             display: none
-    .content
+    .content-headercode
         width: 100%
         height: 100vh
         padding: 0
