--- a/src/view/login.Stud/loginStu.sass
+++ b/src/view/login.Stud/loginStu.sass
@@ -8,14 +8,16 @@ input:-ms-input-placeholder
     color: #adadad
 
 .p-b-26
-    padding-bottom: 26px
+    padding-bottom: 46px
 
 .limiter
     width: 100%
     margin: 0 auto
 
-.login-imagen-robot
+.login-imagen-robot-student
+    max-width: 100%
     height: 80px
+    vertical-align: middle
 
 .container-login100
     width: 100%
@@ -28,7 +30,7 @@ input:-ms-input-placeholder
     flex-wrap: wrap
     justify-content: center
     align-items: center
-    padding: 15px
+    // padding: 15px
     background-image: url(./images/terraquio.webp)
     background-position: center center
     background-repeat: no-repeat
@@ -37,7 +39,7 @@ input:-ms-input-placeholder
     background-color: #c4c4c4
 
 .wrap-login100
-    width: 470px
+    width: 410px
     background: #fff
     border-radius: 10px
     overflow: hidden
@@ -76,7 +78,6 @@ input[type=text]
     font-size: 15px
     color: #555555
     line-height: 1.2
-
     display: block
     width: 100%
     height: 45px
@@ -208,4 +209,56 @@ input[type=text]
 
 @media (max-width: 576px)
     .wrap-login100
-        padding: 50px 15px 30px 15px
+        width: 370px
+        background: #fff
+        border-radius: 10px
+        overflow: hidden
+        padding: 50px 10px 30px 15px
+        box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.1)
+        -moz-box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.1)
+        -webkit-box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.1)
+        -o-box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.1)
+        -ms-box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.1)   
+    .input100
+        font-family: Opal
+        font-size: 15px
+        color: #555555
+        line-height: 1.2
+        display: block
+        width: 100%
+        height: 45px
+        background: transparent
+        padding: 0 5px
+        outline: none
+        border: none
+    .wrap-input100
+        width: 85%
+        position: relative
+        border-bottom: 3px solid #adadad
+        margin-bottom: 37px
+        left: 28px
+    .login100-form-bgbtn
+        position: absolute
+        z-index: -1
+        width: 300%
+        height: 100%
+        background: #a64bf4
+        background: -webkit-linear-gradient(to left, #21d4fd, #b721ff, #21d4fd, #b721ff)
+        background: -o-linear-gradient(to left, #21d4fd, #b721ff, #21d4fd, #b721ff)
+        background: -moz-linear-gradient(to left, #21d4fd, #b721ff, #21d4fd, #b721ff)
+        background: linear-gradient(to left, #21d4fd, #b721ff, #21d4fd, #b721ff)
+        top: 0
+        left: -100%
+
+        -webkit-transition: all 0.4s
+        -o-transition: all 0.4s
+        -moz-transition: all 0.4s
+        transition: all 0.4s 
+    .wrap-login100-form-btn
+        width: 86%
+        display: block
+        position: relative
+        z-index: 1
+        border-radius: 25px
+        overflow: hidden
+        margin: 0 auto   
